force-app/main/default/objects/Client__c/Client__c.object-meta.xml
<CustomObject>
    <description>This object is related to Service custom object as its customers</description>
    <label>Client</label>
    <nameField>
        <label>Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>