force-app/main/default/objects/Client__c/fields/Client_Phone__c.field-meta.xml
<CustomField>
    <fullName>Client_Phone__c</fullName>
    <description>Captures the phone no of client__c</description>
    <inlineHelpText>Enter Phone No</inlineHelpText>
    <label>Client Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>