force-app/main/default/objects/Client__c/fields/Serial__c.field-meta.xml
<CustomField>
    <fullName>Serial__c</fullName>
    <label>Serial</label>
    <length>30</length>
    <type>Text</type>
</CustomField>