force-app/main/default/objects/Client__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <description>This field replicated the master-detail relationship between custom object Client and custom object Service where Service is the parent</description>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>Clients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>